# Proj.D

./: .gitignore  .onedev-buildspec.yml  CMakeLists.txt  build-win.bat
DentalCAD/: CMakeLists.txt  main.cpp
DentalCAD/gui/: style.cpp
DentalCAD/meshlib/: mesh_data.cpp  mesh_loader.cpp
DentalCAD/renderlib/: camera.cpp
cmake/: Dependencies.cmake  FindOpenMP.cmake
include/DentalCAD/: rlights.h
include/DentalCAD/gui/: style.h
include/DentalCAD/meshlib/: mesh_data.h  mesh_loader.h
include/DentalCAD/renderlib/: camera.h
libs/: CMakeLists.txt
